--- a/scap/templates/config.yaml.j2
+++ b/scap/templates/config.yaml.j2
@@ -55,6 +55,7 @@ services:
       no_proxy_list:
         - eqiad.wmnet
         - codfw.wmnet
+        - discovery.wmnet
       # the list of incoming request headers that can be logged; if left empty,
       # the following headers are allowed: cache-control, content-length,
       # content-type, if-match, user-agent, x-request-id
