Config: Do not use the proxy at all
The Mobile Content Service contacts only internal services, so it
doesn't need access to the proxy at all. Moreover, removing the proxy
secures us from having malicious requests to the external world that
shouldn't happen in the first place.

Bug: T97530
Change-Id: Ie1a0971b79d3abe350cbf4e09153288feb514c07

--- a/scap/templates/config.yaml.j2
+++ b/scap/templates/config.yaml.j2
@@ -50,12 +50,12 @@ services:
       # content for the CSP headers
       # csp: false  # uncomment this line to disable sending them
       # URL of the outbound proxy to use (complete with protocol)
-      proxy: <%= proxy if proxy else '' %>
+      # proxy: <%= proxy if proxy else '' %>
       # the list of domains for which not to use the proxy defined above
-      no_proxy_list:
-        - eqiad.wmnet
-        - codfw.wmnet
-        - discovery.wmnet
+      # no_proxy_list:
+      #  - eqiad.wmnet
+      #  - codfw.wmnet
+      #  - discovery.wmnet
       # the list of incoming request headers that can be logged; if left empty,
       # the following headers are allowed: cache-control, content-length,
       # content-type, if-match, user-agent, x-request-id
