Set timeout for backend /page/html requests
Our p99 latencies for the summary endpoint, both internal and external,
currently spike to over 4 minutes.  I suspect this is related to the fact
that we're currently waiting for requests to time out twice, for two
minutes each time, for large pages due to T184498.  This patch sets a one
minute timeout to test this theory and to reduce four-minute delays to
two-minute delays in this situation.

Change-Id: I2f487d4f27be3ac28e67e6032885bf042422b326

--- a/scap/templates/config.yaml.j2
+++ b/scap/templates/config.yaml.j2
@@ -91,4 +91,4 @@ services:
         query: "{{ default(request.query, {}) }}"
         headers: "{{request.headers}}"
         body: "{{request.body}}"
-
+        timeout: 60000
