Mobile-HTML: Define external REST API endpoint config vars
Adds definitions for two config variables that are used in constructing
REST API URLs injected into the mobile-html output.

Bug: T248197
Change-Id: Iff3753c49fcf97fbe6eda38f8d153a6ff8773fb5

--- a/scap/templates/config.yaml.j2
+++ b/scap/templates/config.yaml.j2
@@ -93,3 +93,6 @@ services:
         headers: "{{request.headers}}"
         body: "{{request.body}}"
         timeout: 60000
+      # REST API external base URIs (for injection into mobile-html output)
+      mobile_html_rest_api_base_uri: '//meta.wikimedia.org/api/rest_v1/'
+      mobile_html_local_rest_api_base_uri_template: '//{{domain}}/api/rest_v1/'
