--- a/scap/templates/config.yaml.j2
+++ b/scap/templates/config.yaml.j2
@@ -96,3 +96,12 @@ services:
       # REST API external base URIs (for injection into mobile-html output)
       mobile_html_rest_api_base_uri: '//meta.wikimedia.org/api/rest_v1/'
       mobile_html_local_rest_api_base_uri_template: '//{{domain}}/api/rest_v1/'
+      mobile_html_csp: "default-src 'none';
+        connect-src app://*.wikipedia.org https://*.wikipedia.org;
+        media-src app://upload.wikimedia.org https://upload.wikimedia.org 'self';
+        img-src app://*.wikimedia.org https://*.wikimedia.org app://wikimedia.org https://wikimedia.org 'self' data:;
+        object-src 'none';
+        script-src app://meta.wikimedia.org https://meta.wikimedia.org 'unsafe-inline';
+        style-src app://meta.wikimedia.org https://meta.wikimedia.org app://*.wikipedia.org https://*.wikipedia.org 'self' 'unsafe-inline';
+        frame-ancestors 'self'
+        "
