Add request template for load.php
Adds a new request template for load.php. The service was previously
making raw requests to the public load.php endpoint, but this does not
work in Kubernetes.

This is needed here to support the mobileapps service as it
transitions off SCB and onto Kubernetes.

Bug: T258186
Depends-On: Ia436ac9249170d27e4d1dece3eebd8efae86b64c
Change-Id: Ib3b369a54c6dff3dddf99bb800d233b0d74cdaa1

--- a/scap/templates/config.yaml.j2
+++ b/scap/templates/config.yaml.j2
@@ -85,6 +85,14 @@ services:
           user-agent: "{{user-agent}}"
           accept-language: "{{accept-language}}"
         body: "{{ default(request.query, {}) }}"
+      # the template used for requesting ResourceLoader module content from load.php
+      mw_resource_loader_req:
+        method: post
+        uri: <%= mw_resource_loader_uri %>
+        headers:
+          host: "{{request.params.domain}}"
+          user-agent: "{{user-agent}}"
+        body: "{{ default(request.query, {}) }}"
       # the request template for contacting RESTBase
       restbase_req:
         method: "{{request.method}}"
